--- a/.github/workflows/StagePush.yml
+++ b/.github/workflows/StagePush.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
           ref: main
       - uses: actions/checkout@v3
         with:
