--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -139,7 +139,7 @@ jobs:
             const { data: resp } = await github.actions.listWorkflowRunArtifacts({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: ${{ github.event.workflow_run.id }}
+              run_id: context.runId
             })
             const artifact = resp.artifacts.find((a) => a.name === "assemble-output")
 
@@ -193,7 +193,7 @@ jobs:
             const { data: resp } = await github.actions.listJobsForWorkflowRun({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: ${{ github.event.workflow_run.id }}
+              run_id: context.runId
             })
             const job = resp.jobs.find((j) => j.name === "get-pr-number")
 
@@ -216,7 +216,7 @@ jobs:
             const { data: resp } = await github.actions.listWorkflowRunArtifacts({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: ${{ github.event.workflow_run.id }}
+              run_id: context.runId
             })
             const artifact = resp.artifacts.find((a) => a.name === "assemble-output")
 
