--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -65,7 +65,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: assemble-output
-          path: app-android/build/outputs
+          path: app-android/build/outputs/apk/dev/debug/app-android-dev-debug.apk
           retention-days: 14
 
       - name: Upload build reports
