:Sparkles: Add Prevent classes not used in Jetpack Compose from appearing in suggestions.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ local.properties
 *.iml
 .idea/*
 !.idea/copyright
+!.idea/codeInsightSettings.xml
+
 # Keep the code styles.
 !/.idea/codeStyles
 /.idea/codeStyles/*
